# POO_II-Trabalho_Chat

./: Dockerfile  README.md  client.py  docker-compose.yml  funcionario.py  funcionario_main.py  main.py  requirements.txt  script.py  server.py  test_server.py  user_class.py  variaveis.py  worker_main.py
bd/: postgresSQL.py  redis.py  redis_bd.py  redis_ex.py  worker.py  worker_main.py
chat/: client_main.py  funcionario_main.py  server.py  test_server.py  test_user.py  user_class.py  variaveis.py
worker/: pyproject.toml
worker/src/worker/: __init__.py  postgresSQL.py  redis_bd.py  worker.py
